// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NetworkSelect - Snapshots > should match snapshot with default state 1`] = `
<button
  aria-autocomplete="none"
  aria-controls="radix-_r_20_"
  aria-expanded="false"
  class="flex cursor-pointer items-center justify-between gap-2 whitespace-nowrap rounded-lg border px-3 text-sm ring-offset-background placeholder:text-muted-foreground focus:outline-none disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 transition-all h-10 py-2.5 border-zinc-800 bg-zinc-900/50 text-zinc-200 hover:border-zinc-700 focus:border-violet-500/50 focus:ring-1 focus:ring-violet-500/50 w-[200px]"
  data-state="closed"
  dir="ltr"
  role="combobox"
  type="button"
>
  <span
    style="pointer-events: none;"
  >
    <div
      class="flex items-center gap-3"
    >
      <span
        class="inline-flex items-center justify-center"
      >
        <svg
          class="web3icons flex-shrink-0"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3v6.651l5.625 2.516z"
            fill="#8FFCF3"
          />
          <path
            d="m12 3-5.625 9.166L12 9.653z"
            fill="#CABCF8"
          />
          <path
            d="M12 16.478V21l5.625-7.784z"
            fill="#CBA7F5"
          />
          <path
            d="M12 21v-4.522l-5.625-3.262z"
            fill="#74A0F3"
          />
          <path
            d="m12 15.43 5.625-3.263L12 9.652z"
            fill="#CBA7F5"
          />
          <path
            d="M6.375 12.167 12 15.43V9.652z"
            fill="#74A0F3"
          />
          <path
            clip-rule="evenodd"
            d="m12 15.43-5.625-3.263L12 3l5.624 9.166zm-5.252-3.528 5.161-8.41v6.114zm-.077.229 5.238-2.327v5.364zm5.418-2.327v5.364l5.234-3.037zm0-.198 5.161 2.296-5.161-8.41z"
            fill="#202699"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="m12 16.406-5.625-3.195L12 21l5.624-7.79zm-4.995-2.633 4.904 2.79v4.005zm5.084 2.79v4.005l4.905-6.795z"
            fill="#202699"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="font-bold"
      >
        Ethereum
      </span>
    </div>
  </span>
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-down h-4 w-4 transition-transform text-zinc-500"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6 9 6 6 6-6"
    />
  </svg>
</button>
`;

exports[`NetworkSelect - Snapshots > should match snapshot with different network 1`] = `
<button
  aria-autocomplete="none"
  aria-controls="radix-_r_2a_"
  aria-expanded="false"
  class="flex cursor-pointer items-center justify-between gap-2 whitespace-nowrap rounded-lg border px-3 text-sm ring-offset-background placeholder:text-muted-foreground focus:outline-none disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 transition-all h-10 py-2.5 border-zinc-800 bg-zinc-900/50 text-zinc-200 hover:border-zinc-700 focus:border-violet-500/50 focus:ring-1 focus:ring-violet-500/50 w-[200px]"
  data-state="closed"
  dir="ltr"
  role="combobox"
  type="button"
>
  <span
    style="pointer-events: none;"
  >
    <div
      class="flex items-center gap-3"
    >
      <span
        class="inline-flex items-center justify-center"
      >
        <svg
          class="web3icons flex-shrink-0"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16.364 15.217 4.27-2.435a.73.73 0 0 0 .366-.627V7.284a.72.72 0 0 0-.366-.627l-4.27-2.435a.74.74 0 0 0-.732 0l-4.27 2.435a.72.72 0 0 0-.366.627v8.704l-2.994 1.707-2.994-1.707v-3.415l2.994-1.707 1.974 1.127V9.702l-1.608-.918a.75.75 0 0 0-.732 0l-4.27 2.435a.72.72 0 0 0-.366.627v4.87c0 .258.14.498.366.627l4.27 2.436a.75.75 0 0 0 .732 0l4.27-2.436a.72.72 0 0 0 .366-.626V8.012l.053-.03 2.94-1.677 2.994 1.707v3.415l-2.994 1.707-1.972-1.124v2.291l1.606.916a.75.75 0 0 0 .732 0z"
            fill="url(#polygon__a)"
          />
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="polygon__a"
              x1="2.942"
              x2="20.119"
              y1="17.194"
              y2="7.101"
            >
              <stop
                stop-color="#A726C1"
              />
              <stop
                offset=".88"
                stop-color="#803BDF"
              />
              <stop
                offset="1"
                stop-color="#7B3FE4"
              />
            </lineargradient>
          </defs>
        </svg>
      </span>
      <span
        class="font-bold"
      >
        Polygon
      </span>
    </div>
  </span>
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-down h-4 w-4 transition-transform text-zinc-500"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6 9 6 6 6-6"
    />
  </svg>
</button>
`;

exports[`NetworkSelect - Snapshots > should match snapshot with disabled state 1`] = `
<button
  aria-autocomplete="none"
  aria-controls="radix-_r_25_"
  aria-expanded="false"
  class="flex cursor-pointer items-center justify-between gap-2 whitespace-nowrap rounded-lg border px-3 text-sm ring-offset-background placeholder:text-muted-foreground focus:outline-none disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 transition-all h-10 py-2.5 border-zinc-800 bg-zinc-900/50 text-zinc-200 hover:border-zinc-700 focus:border-violet-500/50 focus:ring-1 focus:ring-violet-500/50 w-[200px]"
  data-disabled=""
  data-state="closed"
  dir="ltr"
  disabled=""
  role="combobox"
  type="button"
>
  <span
    style="pointer-events: none;"
  >
    <div
      class="flex items-center gap-3"
    >
      <span
        class="inline-flex items-center justify-center"
      >
        <svg
          class="web3icons flex-shrink-0"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.515 8.471v7.056c0 .45.245.867.64 1.092l6.205 3.529a1.3 1.3 0 0 0 1.28 0l6.203-3.53c.396-.224.64-.64.64-1.09V8.47c0-.45-.244-.867-.64-1.091L12.64 3.85a1.3 1.3 0 0 0-1.28 0L5.155 7.38a1.25 1.25 0 0 0-.639 1.091"
            fill="#213147"
          />
          <path
            d="m13.353 13.368-.885 2.39a.3.3 0 0 0 0 .205l1.523 4.112 1.76-1.001-2.113-5.706a.152.152 0 0 0-.285 0m1.774-4.019a.152.152 0 0 0-.285 0l-.885 2.39a.3.3 0 0 0 0 .205l2.494 6.732 1.761-1.001z"
            fill="#12AAFF"
          />
          <path
            d="M11.998 4.115a.3.3 0 0 1 .126.033l6.715 3.818a.25.25 0 0 1 .126.214v7.635c0 .089-.048.17-.126.214l-6.715 3.819a.25.25 0 0 1-.126.032.3.3 0 0 1-.125-.032l-6.715-3.815a.25.25 0 0 1-.126-.215V8.182c0-.089.048-.17.126-.215l6.715-3.818a.26.26 0 0 1 .125-.034m0-1.115c-.238 0-.478.06-.692.183L4.593 7A1.36 1.36 0 0 0 3.9 8.182v7.635c0 .487.264.938.693 1.181l6.714 3.819a1.41 1.41 0 0 0 1.386 0l6.714-3.818a1.36 1.36 0 0 0 .693-1.182V8.182A1.36 1.36 0 0 0 19.407 7l-6.716-3.817A1.4 1.4 0 0 0 11.998 3"
            fill="#9DCCED"
          />
          <path
            d="m7.559 18.685.617-1.666 1.244 1.018-1.163 1.046z"
            fill="#213147"
          />
          <path
            d="M11.433 7.635H9.731a.3.3 0 0 0-.285.197l-3.649 9.852 1.761 1.001 4.018-10.849a.15.15 0 0 0-.143-.2m2.979-.001h-1.703a.3.3 0 0 0-.284.197l-4.167 11.25 1.761 1 4.535-12.246a.15.15 0 0 0-.142-.2"
            fill="#fff"
          />
        </svg>
      </span>
      <span
        class="font-bold"
      >
        Arbitrum
      </span>
    </div>
  </span>
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-down h-4 w-4 transition-transform text-zinc-500"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6 9 6 6 6-6"
    />
  </svg>
</button>
`;
